[gd_scene load_steps=26 format=3 uid="uid://6rkaprmq4ect"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_37q80"]
[ext_resource type="Texture2D" uid="uid://bd1dsmqbq3l7" path="res://assets/player/character/john/john_placeholder.png" id="2_1lecr"]
[ext_resource type="PackedScene" uid="uid://xy3cvpwdy828" path="res://Utility/hurt_box.tscn" id="3_gs51i"]
[ext_resource type="Script" path="res://Player/StateMachine/Idle.gd" id="3_lcdk6"]
[ext_resource type="Script" path="res://Player/StateMachine/StateMachine.gd" id="3_r7o28"]
[ext_resource type="Script" path="res://Player/StateMachine/Moving.gd" id="4_67rv5"]
[ext_resource type="Theme" uid="uid://bwayc6rbhtvxj" path="res://assets/ui/theme/HEALTH_theme.tres" id="4_f6gen"]
[ext_resource type="Script" path="res://Player/StateMachine/Autopilot.gd" id="6_arvxl"]
[ext_resource type="AudioStream" uid="uid://ul8hunj8tl2t" path="res://Audio/SoundEffect/levelup.ogg" id="7_wl7d2"]
[ext_resource type="Script" path="res://Player/StateMachine/Pathing.gd" id="7_xn56v"]
[ext_resource type="Script" path="res://Player/Attack/attack_manager.gd" id="9_e47dm"]
[ext_resource type="Texture2D" uid="uid://b5l20dpjaj216" path="res://Textures/GUI/exp_background1.png" id="11_6u3jb"]
[ext_resource type="PackedScene" uid="uid://b7c7gsdx2rkjm" path="res://Utility/basic_button.tscn" id="12_i8esf"]
[ext_resource type="Texture2D" uid="uid://t7d7oq4ukono" path="res://Textures/GUI/exp_progress1.png" id="12_tesno"]
[ext_resource type="FontFile" uid="uid://bejghu08d1uvm" path="res://Font/ARIBLK.TTF" id="13_qr3b0"]
[ext_resource type="AudioStream" uid="uid://diaghcy4b4jm" path="res://Audio/SoundEffect/demigods_win.ogg" id="14_78iji"]
[ext_resource type="AudioStream" uid="uid://dcl830nr5lion" path="res://Audio/SoundEffect/dsmv_loss.ogg" id="15_b8x5g"]
[ext_resource type="FontFile" uid="uid://b0d1fu8iufshl" path="res://Font/ARIAL.TTF" id="15_cin0e"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nffdp"]
height = 36.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yfi4i"]
size = Vector2(12, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_anwqc"]
radius = 600.0

[sub_resource type="CircleShape2D" id="CircleShape2D_p2554"]
radius = 200.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6vwp8"]
radius = 30.0

[sub_resource type="Gradient" id="Gradient_1vt5j"]
colors = PackedColorArray(0.375023, 3.55284e-06, 1.81104e-06, 1, 0.494245, 7.23819e-07, 9.67411e-09, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ca7jc"]
gradient = SubResource("Gradient_1vt5j")
width = 128
height = 16

[node name="Player" type="CharacterBody2D" groups=["player"]]
position = Vector2(2.08165e-12, 2.08165e-12)
motion_mode = 1
script = ExtResource("1_37q80")
movement_speed = 200.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -2.08165e-12)
scale = Vector2(3, 3)
texture = ExtResource("2_1lecr")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 76)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_nffdp")

[node name="HurtBox" parent="." instance=ExtResource("3_gs51i")]
position = Vector2(-5, 70)
scale = Vector2(3, 1.64)
collision_mask = 2
HurtBoxType = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(2, 3)
shape = SubResource("RectangleShape2D_yfi4i")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_r7o28")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("3_lcdk6")

[node name="Moving" type="Node" parent="StateMachine"]
script = ExtResource("4_67rv5")

[node name="Autopilot" type="Node" parent="StateMachine"]
script = ExtResource("6_arvxl")

[node name="Pathing" type="Node" parent="StateMachine"]
script = ExtResource("7_xn56v")

[node name="AttackManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("9_e47dm")

[node name="EnemyDetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
shape = SubResource("CircleShape2D_anwqc")
debug_color = Color(0, 0.733333, 0.603922, 0.419608)

[node name="GrabArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
scale = Vector2(1.12, 1)
shape = SubResource("CircleShape2D_p2554")

[node name="CollectArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
shape = SubResource("CircleShape2D_6vwp8")

[node name="GUILayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="GUILayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 1536.0
offset_bottom = 864.0

[node name="ExperienceBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 1536.0
offset_bottom = 60.0
theme = ExtResource("4_f6gen")
value = 100.0
texture_over = ExtResource("11_6u3jb")
texture_progress = ExtResource("12_tesno")

[node name="lbl_level" type="Label" parent="GUILayer/GUI/ExperienceBar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1400.0
offset_right = 1500.0
offset_bottom = 20.0
theme = ExtResource("4_f6gen")
text = "Level: 1"
horizontal_alignment = 1
vertical_alignment = 2

[node name="HealthBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.392157)
layout_mode = 0
offset_left = 710.0
offset_top = 530.0
offset_right = 838.0
offset_bottom = 546.0
theme = ExtResource("4_f6gen")
value = 50.0
texture_progress = SubResource("GradientTexture2D_ca7jc")

[node name="LevelUp" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
layout_mode = 0
offset_left = 1200.0
offset_top = 300.0
offset_right = 1700.0
offset_bottom = 900.0
theme = ExtResource("4_f6gen")

[node name="lbl_LevelUP" type="Label" parent="GUILayer/GUI/LevelUp"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("13_qr3b0")
text = "LEVEL UP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeOptions" type="VBoxContainer" parent="GUILayer/GUI/LevelUp"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 10.0
offset_top = 50.0
offset_right = 190.0
offset_bottom = 100.0

[node name="snd_levelup" type="AudioStreamPlayer" parent="GUILayer/GUI/LevelUp"]
unique_name_in_owner = true
stream = ExtResource("7_wl7d2")
volume_db = -10.0
bus = &"SFX"

[node name="DeathPanel" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 0
offset_left = 230.0
offset_top = -266.0
offset_right = 430.0
offset_bottom = -16.0
theme = ExtResource("4_f6gen")

[node name="lbl_Result" type="Label" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
theme = ExtResource("4_f6gen")
theme_override_fonts/font = ExtResource("15_cin0e")
text = "Result"
horizontal_alignment = 1
vertical_alignment = 1

[node name="snd_victory" type="AudioStreamPlayer" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
stream = ExtResource("14_78iji")
volume_db = -10.0
bus = &"SFX"

[node name="snd_lose" type="AudioStreamPlayer" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
stream = ExtResource("15_b8x5g")
volume_db = -10.0
bus = &"SFX"

[node name="btn_menu" parent="GUILayer/GUI/DeathPanel" instance=ExtResource("12_i8esf")]
layout_mode = 0
offset_left = 60.0
offset_top = 200.0
offset_right = 140.0
offset_bottom = 230.0
text = "Menu"

[node name="lblTimer" type="Label" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 768.0
offset_top = 20.0
offset_right = 848.0
offset_bottom = 44.0
theme = ExtResource("4_f6gen")
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollectedWeapons" type="GridContainer" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 2.0
offset_top = 77.0
offset_right = 202.0
offset_bottom = 93.0
scale = Vector2(3, 3)
columns = 10

[node name="CollectedUpgrades" type="GridContainer" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1.0
offset_top = 143.0
offset_right = 201.0
offset_bottom = 159.0
scale = Vector2(3, 3)
columns = 10

[node name="SessionUpdateTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 45.0

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]
[connection signal="area_entered" from="GrabArea" to="." method="_on_grab_area_area_entered"]
[connection signal="area_entered" from="CollectArea" to="." method="_on_collect_area_area_entered"]
[connection signal="click_end" from="GUILayer/GUI/DeathPanel/btn_menu" to="." method="_on_btn_menu_click_end"]
[connection signal="timeout" from="SessionUpdateTimer" to="." method="_on_session_update_timer_timeout"]

[editable path="HurtBox"]
